Ingestor service minimal